--- a/_layouts/temalar/ilker/blog.html
+++ b/_layouts/temalar/ilker/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-{% include ilker/baslangic.html %}
+{% include temalar/ilker/baslangic.html %}
 </head>
 <body data-gnl="kaplam">
   <header>
@@ -27,7 +27,7 @@
   </main>
   <footer>
     <div data-gnl="kap">
-      {% include ilker/taban.html %}
+      {% include temalar/ilker/taban.html %}
     </div>
   </footer>
 </body>
