--- a/_includes/s1n0/foot.html
+++ b/_includes/s1n0/foot.html
@@ -2,7 +2,7 @@
 <div data-gnl="o">
   <ul class="menü-genel">
     <li>
-    	<a href="https://discord.gg/GeaYaCb">Anlık İletişim</a>
+    	<a href="https://discord.gg/GeaYaCb"><i class="fa fa-comments" aria-hidden="true"></i> Anlık İletişim</a>
     </li>
     <li>
     	<a href="https://github.com/djangoogreniyorum/deveb"><i class="fa fa-github"></i> Github </a>
