--- a/_layouts/temalar/basit/ana-sayfa.html
+++ b/_layouts/temalar/basit/ana-sayfa.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-{% include tema-basit_head.html %}
+{% include temalar/basit/head.html %}
 </head>
 <body data-gnl="ortada">
   <header data-gnl="24 24p" style="background-color:#efefef; border-bottom:3px solid #ddd; padding:15px 0;">
-  {% include tema-basit_header.html %}
+  {% include temalar/basit/header.html %}
   </header>
   <article data-gnl="24 24p">
     <div data-gnl="kaplama">
