Dallığa yeni bölümler eklendi.

--- a/_includes/s1n0/dallik.html
+++ b/_includes/s1n0/dallik.html
@@ -1,5 +1,5 @@
 {%- assign veri = site.data.s1n0.dallik -%}
-{%- assign veri2 = site.data.s1n0.kesitlik-orgusu -%}
+{%- assign veri2 = site.data.s1n0.ana-dallik -%}
 {%- assign dil = page.lang -%}
 {%- assign surum = '1.0' -%}
 {%- assign yol = '/' | append: surum | append: '/' | append: dil | append: '/' -%}
