--- a/assets/deveb/s1n0/deveb.scss
+++ b/assets/deveb/s1n0/deveb.scss
@@ -8,13 +8,16 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////////
 
 @import "diller/dil-tr";
+
 @import "altlik/ayarlar";
 @import "altlik/sifirlama";
 @import "altlik/capraz-tarayici";
+
 @import "orguler/kesitlik-orgusu";
 @import "orguler/icerik-orgusu";
 @import "orguler/dal-orgusu";
 @import "orguler/sekme-orgusu";
+@import "orguler/renk-orgusu";
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////
 // NOTLAR
