--- a/assets/deveb/s1n0/deveb.scss
+++ b/assets/deveb/s1n0/deveb.scss
@@ -18,6 +18,7 @@
 @import "orguler/dal-orgusu";
 @import "orguler/sekme-orgusu";
 @import "orguler/renk-orgusu";
+@import "orguler/konumlama";
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////
 // NOTLAR
