--- a/assets/deveb/s1n0/orguler/_kesitlik-orgusu.scss
+++ b/assets/deveb/s1n0/orguler/_kesitlik-orgusu.scss
@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////////
 //                                                                                               //
-//   KESİTLİK ÖRGÜSÜ s1.2                                                                     //
+//   KESİTLİK ÖRGÜSÜ s1.2                                                                        //
 //                                                                                               //
 //   Bu örgü "bölümleme düzeni", "esnetme düzeni", "sıralama düzeni", "aralama düzeni",          //
 //   "yineleme düzeni", "konumlama düzeni", "biçimleme düzeni" özellikleriyle oluşturulmuştur.   //
@@ -76,7 +76,7 @@
 //    Denklemler: (a * 4 - c), (b * 4 - d)
 //
 //    a ve b değişkenlerine [1,2,3,4,5,6] değerlerinden biri atanır.
-//    b ve d değişkenlerine [0,1,2,3] değerlerinden biri atanır.
+//    c ve d değişkenlerine [0,1,2,3] değerlerinden biri atanır.
 //
 //    Bölüm belirten sayıya erişmek için (a * 4 - c) denklemi kullanılır.
 //    Bölümlük belirten sayıya erişmek için (b * 4 - d) denklemi kullanılır.
