--- a/_layouts/b-default.html
+++ b/_layouts/b-default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-{% include b-head.html %}
+{% include s0n1/b-head.html %}
 </head>
 <body data-gnl="sütun sığdır">
 
@@ -14,7 +14,7 @@
         <label for="dallık-ana-çapraz">///</label>
       </div>
       <div data-gnl="1 1p" data-dev="2 3p sağda-ol üstte-ol">
-        {% include icerik.html %}
+        {% include s0n1/icerik.html %}
       </div>
     </div>
     <div id="içerik" data-gnl="1 1p" data-kçk="18 22p sığdır oluk-çevre">
@@ -31,7 +31,7 @@
     </div>
   </div>
   <footer data-gnl="24 24p">
-  {% include foot.html %}
+  {% include s0n1/foot.html %}
   </footer>
   
 </body>
