--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 
-  {% include head.html %}
+  {% include s0n1/head.html %}
 
   <body data-gnl="o" class="bg" style="min-height:100vh;">
 
@@ -42,7 +42,7 @@
 
     </div>
     <footer data-gnl="_a">
-      {% include foot.html %}
+      {% include s0n1/foot.html %}
     </footer>
   </body>
 
