--- a/_layouts/tek.html
+++ b/_layouts/tek.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-{% include b-head.html %}
+{% include s0n1/b-head.html %}
 </head>
 <body data-gnl="sütun">
   <header data-gnl="24 24p" class="header">
-  {% include b-header.html %}
+  {% include s0n1/b-header.html %}
   </header>
   <div data-gnl="23 24p göbekte-ol" data-dev="kaplama">
   {{ content }}
   </div>
   <footer data-gnl="24 24p">
-  {% include foot.html %}
+  {% include s0n1/foot.html %}
 </footer>
 </body>
 </html>
