--- a/assets/deveb/s1n0/deveb-en.scss
+++ b/assets/deveb/s1n0/deveb-en.scss
@@ -1,6 +1,13 @@
 
-@import "dil-en";
-@import "ayarlar";
-@import "sifirlama";
-@import "capraz-tarayici";
-@import "kesitlik-orgusu";
+@import "diller/dil-en";
+
+@import "altlik/ayarlar";
+@import "altlik/sifirlama";
+@import "altlik/capraz-tarayici";
+
+@import "orguler/kesitlik-orgusu";
+@import "orguler/icerik-orgusu";
+@import "orguler/dal-orgusu";
+@import "orguler/sekme-orgusu";
+@import "orguler/renk-orgusu";
+@import "orguler/konumlama";
