--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,7 @@
           <div data-gnl="o" data-etki="havada">
             <h1 class="metin-deveb" style="font-size:60pt; margin:0; justify-content:center; font-family: 'Comfortaa', cursive; color:#eee !important; display:flex;">deveb</h1>
             <p class="metin-gri-3 beri-1" style="font-size:13pt; text-align:center;">
-              İşte bu! Yepyeni bir önyüz çatısı buldunuz. Ağ (web) sayfalarını tasarlarken deveb'in oluşturduğu özelliklerden yararlanın. Tüm uygulamalarınızı kapsamlı bileşenleri ile kolayca yapmaya başlayın. Görüntülük örgüsü, kesitlik örgüsü, renk örgüsü ve dahası İngilizce
+              İşte bu! Yepyeni bir önyüz çatısı buldunuz. Ağ (web) sayfalarını tasarlarken deveb'in oluşturduğu özelliklerden yararlanın. Tüm uygulamalarınızı kapsamlı bileşenleri ile kolayca yapmaya başlayın. Görüntülük örgüsü, kesitlik örgüsü ve dahası İngilizce
               ve Türkçe olmak üzere iki dil desteği ile sizi bekliyor.
             </p>
             <p class="metin-gri-3" data-gnl="metin-ortada">
